examples/test/testpolicy16137.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16137
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key40: value47
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value7
          key5: value4
      podSelector:
        matchLabels:
          key49: value21
          key30: value27
